<resources>
    <string name="app_name">JobQuery</string>

    <string name="add_query">Добавить новый поиск</string>
    <string name="action_settings">Settings</string>
    <string name="edit_query">Изменить</string>
    <string name="job_query_name">Название:</string>
    <string name="new_job_offers">Количество новых предложений:</string>
    <string name="zero">0</string>
    <string name="empty">Пусто</string>
    <string name="key_word">Ключевое слово:</string>
    <string name="add_job_query_button">Добавить</string>
    <string name="cancel_button">Отменить</string>
    <string name="delete_button">Удалить</string>
</resources>
