<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
<LinearLayout
    android:layout_width="wrap_content" android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/job_query_name"
            android:id="@+id/jobQueryLabelTextView"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:paddingLeft="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty"
            android:id="@+id/jobQueryNameTextView"
            android:textSize="16sp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_job_offers"
            android:id="@+id/NewJobOffersLabelTextView"
            android:textSize="16sp"
            android:paddingLeft="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:id="@+id/newJobOffersTextView"
            android:textSize="16sp"
            android:layout_marginLeft="5dp" />

    </LinearLayout>

</LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/edit_query"
        android:id="@+id/editQueryButton"
        android:textSize="12dp"
        android:layout_weight="1"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="2dp" />
</LinearLayout>